# agentest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  action.yml  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js
.github/workflows/: ci.yml  docs.yml
action/: action.yml  evaluate.py
docs/: changelog.md  contributing.md  index.md
docs/api/: benchmark.md  core.md  datasets.md  evaluators.md  integrations.md  mcp.md  metrics.md  middleware.md  mocking.md  recorder.md  regression.md  replayer.md  reporters.md  snapshots.md  stats.md  streaming.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: architecture.md  benchmarking.md  best-practices.md  cli.md  evaluators.md  integrations.md  mcp-testing.md  mocking.md  otel.md  pytest.md  quickstart.md  recording.md  replaying.md  web-ui.md
examples/: basic_usage.py  benchmark_models.py  coding_agent.py
examples/traces/: code_search.json  summarize_readme.json  unsafe_agent.json
scripts/: generate_sample_traces.py
src/agentest/: __init__.py  cli.py  core.py  datasets.py  pytest_plugin.py  regression.py  snapshots.py  stats.py
src/agentest/benchmark/: __init__.py  comparison.py  runner.py
src/agentest/cli/: __init__.py  _dataset.py  _diff.py  _doctor.py  _evaluate.py  _init.py  _main.py  _regression.py  _replay.py  _serve.py  _snapshot.py  _stats.py  _summary.py  _templates.py  _watch.py
src/agentest/evaluators/: __init__.py  _llm_utils.py  base.py  builtin.py  metrics.py
src/agentest/integrations/: __init__.py  _anthropic_patch.py  _openai_patch.py  autogen.py  claude_agent_sdk.py  crewai.py  instrument.py  langchain.py  llamaindex.py  middleware.py  openai_agents.py  otel.py
src/agentest/mcp_testing/: __init__.py  assertions.py  security.py  server_tester.py
src/agentest/mocking/: __init__.py  tool_mock.py
src/agentest/recorder/: __init__.py  recorder.py  replayer.py  streaming.py
src/agentest/reporters/: __init__.py  console.py  json_reporter.py
src/agentest/server/: __init__.py  app.py
src/agentest/server/static/: index.html
src/css/: custom.css
tests/: test_benchmark.py  test_cli.py  test_core.py  test_datasets.py  test_dx.py  test_evaluators.py  test_examples.py  test_integrations.py  test_mcp_security.py  test_mcp_testing.py  test_metrics.py  test_middleware.py  test_mocking.py  test_otel_exporter.py  test_pytest_plugin.py  test_recorder.py  test_regression.py  test_reporters.py  test_server.py  test_snapshots.py  test_stats.py  test_streaming.py
